# LittleOS-Gajah-PHP-Runtime

./: .gitignore  CMakeLists.txt  GNUmakefile  README.md  build.bat  build_kernel.sh  compile.sh  limine.conf  run_virtualbox.bat  toolreqruiement.txt
boot/: limine.conf
kernel/: entry.asm  isr.asm  linker.lds
kernel/include/: boot.hpp  console.hpp  fonts.hpp  hal.hpp  interrupts.hpp  kernel.hpp  limine.h  php_runtime.hpp  themes.hpp  ui.hpp  utils.hpp
kernel/main/: console.php  driver.php  graphics.php  interrupts.php  kernel.php  keyboard.php  limine.php  memory.php  mouse.php  pci.php  ports.php  rtc.php  string.php  system_manager.php  timer.php
kernel/source/: console.cpp  desktop.cpp  interrupts.cpp  main.cpp  memory.cpp  mouse.cpp  php_runtime.cpp  rtc.cpp  utils.cpp
